# Translator

./: .gitignore  README.md  hugcheck.py  notes.md  pyproject.toml  requirements.txt
lagoon_translator/: .env  Embedder.py  Ingestor.py  Translator.py  config.py  main.py  spark_maker.py  utils.py
lagoon_translator/documators/: Documator.py  NCCustKeyDocumator.py  NCCustVectDocumator.py
lagoon_translator/ingestors/: ElasticIngestor.py  QDrantIngestor.py
lagoon_translator/ingestors/embeddors/: TrivialEmbedder.py
lagoon_translator/reducers/: NCCustReducer.py  Reducer.py
lagoon_translator/templates/: ncentral_template.py
previous-tries/: Output.md  Output.txt  transformations.ipynb  translate.py  translate_also_bad.py  translate_bad.py  translate_old.py  xxxx.txt  yyy.txt
src/: .env  Document.py  Translator.py  config.py  main.py  spark_maker.py  utils.py
src/documators/: Documator.py  NCCustKeyDocumator.py  NCCustVectDocumator.py
src/ingestors/: ElasticIngestor.py  Ingestor.py  QDrantIngestor.py
src/ingestors/embeddors/: TrivialEmbedder.py
src/translators/: NCCustTranslator.py  QDrantTranslator.py  Translator.py
