[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lagoon_translator"
version = "0.0.1"
authors = [
  { name="Mimis Chlympatsos", email="mimis.chlympatsos@bluebirdinc.com" },
]
description = "Defines (abstract) classes transforming data in a storage location and storing it in a keyword/vector database."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mimischly7/Translator"
Issues = "https://github.com/mimischly7/Translator"